<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.masa.actionbartest.MainActivity">
    <item
        android:title="@string/action_download"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:id="@+id/action_download"
        android:icon="@mipmap/ic_action_download" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="101"
        android:title="@string/action_settings"
        android:visible="false" />
    <item
        android:id="@+id/action_db_init"
        android:orderInCategory="102"
        android:title="@string/action_db_init"
        android:visible="false" />
</menu>
